--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -38,7 +38,7 @@ nav li:hover
 h2
 {
     font-size: 18px;
-    padding-left: 45px;
+    padding-left: 50px;
     padding-top: 30px;
 }
 
@@ -49,7 +49,7 @@ h2
     padding: 50px;
 }
 
-#s1
+.s1
 {
    margin-left: 50px;
    margin-bottom: 30px;
@@ -185,7 +185,7 @@ input
 
 .vignette
 {
-    min-width: 245px;
+    width: 245px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
 }
@@ -202,7 +202,7 @@ input
 .ap
 {
     padding-top: 30px;
-    padding-left: 45px;
+    padding-left: 50px;
     font-size: 16px;
     font-weight: bold;
 }
@@ -293,7 +293,6 @@ aside
 .aa1
 {
     display: flex;
-    justify-content: space-around;
 }
 /*Bloc gauche*/
 .bloc_gauche
