--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -99,7 +99,7 @@ input
     color:#0065fc;
     border: 2px solid #f2f2ff;
     background-color: #deebff;
-    padding: 14px;
+    padding: 13px;
     margin-right: 10px;
     border-radius: 100%; 
 }
@@ -109,7 +109,7 @@ input
     color:#0065fc;
     border: 2px solid #f2f2ff;
     background-color: #deebff;
-    padding: 14px 17px 14px 17px;
+    padding: 13px 17px 13px 17px;
     margin-right: 10px;
     border-radius: 100%; 
 }
@@ -188,6 +188,7 @@ input
     width: 245px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
+    border: 2px solid white;
 }
 
 .image
@@ -196,7 +197,7 @@ input
     height: 120px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
-    border: 3px solid white;
+    border: 2px solid white;
 }
 
 .ap
@@ -267,6 +268,7 @@ aside
 
 .nuitee
 {
+    padding: 5px;
     padding-left: 12px;
 }
 
@@ -293,6 +295,7 @@ aside
 .aa1
 {
     display: flex;
+    justify-content: space-around;
 }
 /*Bloc gauche*/
 .bloc_gauche
@@ -300,8 +303,7 @@ aside
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    padding: 1.5em;
-    width: 50%;
+    padding: 15px 0 35px 0;
 }
 
 .vp
@@ -317,6 +319,7 @@ aside
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
+    padding-left: 30px;
 }
 
 .fp
@@ -343,8 +346,7 @@ aside
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
-    padding: 1.5em;
-    width: 50%;
+    padding: 15px 0 35px 0;
 }
 
 .ndgpl
@@ -352,6 +354,7 @@ aside
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
+    padding-left: 30px;
 }
 
 .ndg
