--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -202,8 +202,7 @@ input
 
 .ap
 {
-    padding-top: 30px;
-    padding-left: 50px;
+    padding: 20px 0 30px 50px;
     font-size: 16px;
     font-weight: bold;
 }
