--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -38,8 +38,7 @@ nav li:hover
 h2
 {
     font-size: 18px;
-    padding-left: 50px;
-    padding-top: 30px;
+    padding: 30px 0 0 50px;
 }
 
 /*Logo*/
@@ -147,8 +146,8 @@ input
 .s2
 {
     display: flex;
-    margin-left: 50px;
-    margin-right: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 #ah1
@@ -172,7 +171,7 @@ input
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .c2
@@ -180,7 +179,7 @@ input
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .vignette
@@ -248,7 +247,7 @@ aside
 {
     display: flex;
     justify-content: space-around;
-    margin-top: 50px;
+    padding-top: 50px;
     font-weight: bold;
     font-size: 18px;
 }
@@ -294,14 +293,9 @@ aside
 {
     display: flex;
     justify-content: space-around;
-}
-/*Bloc gauche*/
-.bloc_gauche
-{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding: 15px 0 35px 0;
+    padding-bottom: 30px; 
+    padding-left: 10px;
+    padding-right: 15px;
 }
 
 .vp
@@ -317,7 +311,6 @@ aside
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
-    padding-left: 30px;
 }
 
 .fp
@@ -338,21 +331,11 @@ aside
     border: 1px solid white;
 }
 
-/*Bloc droit*/
-.bloc_droit
-{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    padding: 15px 0 35px 0;
-}
-
 .ndgpl
 {
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
-    padding-left: 30px;
 }
 
 .ndg
