Préparation du responsive design 23 Mars 2021.

--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -20,14 +20,14 @@ nav ul
 
 nav li 
 {
-    padding-top: 50px;
+    padding-top: 3em;
 }
 
 nav a
 {
     text-decoration: none;
     color: #0065fc;
-    margin: 30px;
+    margin: 1.8em;
 }
 
 nav li:hover
@@ -38,28 +38,26 @@ nav li:hover
 h2
 {
     font-size: 18px;
-    padding: 30px 0 0 50px;
+    padding: 1.8em 0 0 3em;
 }
 
 /*Logo*/
 .logo
 {
     text-align: left;
-    padding: 50px;
+    padding: 3em;
 }
 
 .s1
 {
-   margin-left: 50px;
-   margin-bottom: 30px;
+   margin-left: 3em;
+   margin-bottom: 1.8em;
 }
 
 /*Recherhe*/
 #recherche
 {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
 }
 
 .marqueur_1
@@ -67,14 +65,14 @@ h2
     border-radius: 20px 0 0 20px;
     background-color: #f2f2f2;
     font-size: 15px;
-    padding: 16px;
+    padding: 1em;
 }
 
 input
 {
     border: 2px solid #f2f2f2;
     font-size: 15px;
-    padding: 14px;
+    padding: 0.8em;
 }
 
 .marqueur_2
@@ -84,7 +82,7 @@ input
     color: white;
     border: 1px solid #f2f2f2; 
     font-size: 15px;
-    padding: 15px;
+    padding: 1em;
 }
 
 .title_f
@@ -98,8 +96,8 @@ input
     color:#0065fc;
     border: 2px solid #f2f2ff;
     background-color: #deebff;
-    padding: 13px;
-    margin-right: 10px;
+    padding: 0.9em;
+    margin-right: 0.6em;
     border-radius: 100%; 
 }
 
@@ -108,20 +106,20 @@ input
     color:#0065fc;
     border: 2px solid #f2f2ff;
     background-color: #deebff;
-    padding: 13px 17px 13px 17px;
+    padding: 0.8em 1em 0.8em 1em;
     margin-right: 10px;
     border-radius: 100%; 
 }
 
 .i1
 {
-    margin: 30px;
+    margin: 2em;
     border-radius: 20px 20px 20px 20px;
     border: 1px solid #f2f2f2;
     background-color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 13px 13px 13px 0;
+    padding: 0.9em 0.9em 0.9em 0;
 }
 
 .i1:hover
@@ -135,19 +133,18 @@ input
 {
     color: #0065fc;
     font-size: 12px;
-    padding: 5px 10px 5px 10px;
+    padding: 0.3em 0.7em 0.3em 0.7em;
     margin-right: 14px;
     border-radius: 100%;
-    border: 3px solid #f2f2ff;
-    text-align: center;
+    border: 2px solid #f2f2ff;
 }
 
 /*Accomodations'beginning*/
 .s2
 {
     display: flex;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 3em;
+    padding-right: 3em;
 }
 
 #ah1
@@ -201,14 +198,14 @@ input
 
 .ap
 {
-    padding: 20px 0 30px 50px;
+    padding: 1.2em 0 2em 3em;
     font-size: 16px;
     font-weight: bold;
 }
 
 .legende
 {
-    padding-left:12px; 
+    padding-left:0.7em; 
     font-weight: bold;
 }
 /*Accomodations'ending*/
@@ -217,7 +214,7 @@ input
 aside
 {
     width: 30%;
-    margin-left: 50px;
+    margin-left: 3em;
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
 }
@@ -230,7 +227,7 @@ aside
     height: 135px;
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    margin: 30px auto 30px auto;
+    margin: 2em auto 2em auto;
     font-size: 16px;
 }
 
@@ -247,14 +244,14 @@ aside
 {
     display: flex;
     justify-content: space-around;
-    padding-top: 50px;
+    padding-top: 3em;
     font-weight: bold;
     font-size: 18px;
 }
 
 .etoiles1
 {
-    padding-left: 12px;
+    padding-left: 0.7em;
     color:#0065fc;
 }
 
@@ -265,25 +262,25 @@ aside
 
 .nuitee
 {
-    padding: 5px;
+    padding: 0.3em;
     padding-left: 12px;
 }
 
 .nuitee2
 {
-    padding-top: 5px;
+    padding-top: 0.3em;
 }
 
 .etoiles2
 {
-    padding-top: 35px;
+    padding-top: 2.2em;
     color: #0065fc;
 }
 
 .legendebis
 {
     font-weight: bold;
-    padding-top: 5px;
+    padding-top: 0.3em;
 }
 
 /*Populars' ending*/
@@ -293,9 +290,7 @@ aside
 {
     display: flex;
     justify-content: space-around;
-    padding-bottom: 30px; 
-    padding-left: 10px;
-    padding-right: 15px;
+    padding: 0 1em 2em 0.6em;
 }
 
 .vp
@@ -401,14 +396,14 @@ h3
 {
    font-size: 16px; 
    font-weight: bold;
-   padding-left: 15px;
+   padding-left: 1em;
 }
 /*Activities' ending*/
 
 /*Footer's beginning*/
 footer
 {
-    padding-top: 30px;
+    padding-top: 2em;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
@@ -421,12 +416,12 @@ footer li
     display: flex;
     flex-flow: column wrap;
     align-items: flex-start;
-    margin: 10px;
+    margin: 0.6em;
 }
 
 .ap2
 {
-    margin-left: 50px;
+    margin-left: 3em;
     font-size: 16px;
     font-weight: bold;
 }
