--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,4 +1,27 @@
-@media all and (min-width: 1000px) and (max-width: 1500px)
-{
+    @media screen and (max-width: 1024px)
+    {
+        #s2
+        {
+            padding: 0;
+            display: block;
+        }
 
-}
+        #ah1
+        {
+            width: auto;
+        }
+
+        .c1
+        {
+            padding: 0em;
+            flex-flow: column wrap;
+        }
+
+        .c2
+        {
+            padding: 0em;
+            flex-flow: column wrap;
+        }
+    }
+
+    
