--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,5 +1,10 @@
-    @media screen and (max-width: 1024px)
+    @media all and (max-width: 1024px)
     {
+        #main
+        { 
+            width: auto;
+        }
+
         #s2
         {
             padding: 0;
@@ -13,15 +18,16 @@
 
         .c1
         {
-            padding: 0em;
             flex-flow: column wrap;
         }
 
         .c2
         {
-            padding: 0em;
             flex-flow: column wrap;
         }
+
+
     }
+
 
     
