--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,31 +1,88 @@
-    @media all and (max-width: 1024px)
+@media screen and (max-width: 1024px)
+{
+    .h2
     {
-        #main
-        { 
-            width: auto;
-        }
+        font-size: 0;
+    }
 
-        #s2
-        {
-            padding: 0;
-            display: block;
-        }
+    .s2
+    {
+        padding: 0;
+    }
 
-        #ah1
-        {
-            width: auto;
-        }
+    #ah1
+    {
+        width: 50%;
+        background-color: white;
+    }
 
-        .c1
-        {
-            flex-flow: column wrap;
-        }
+    .presentation
+    {
+        align-items: center;
+    }
 
-        .c2
-        {
-            flex-flow: column wrap;
-        }
+    aside
+    {
+        width: 50%;
+        padding-bottom: 0.7em;
+        background-color: white;
+    }
 
+    .p1
+    {
+        box-shadow: 7px 7px 10px #f2f2f2;
+    }
+
+    .graphique
+    {
+        padding-top: 3em;
+    }
+
+    .aa1
+    {
+        justify-content: space-around;
+        flex-flow: row wrap;
+    }
+
+    .vp
+    {
+        width: 33%;
+        margin: 1em;
+    }
+
+    .fpif
+    {
+        width: 33%;
+    }
+
+    .cal
+    {
+        width: 33%;
+        margin: 1em;
+    }
+
+    .ndgpl
+    {
+        width: 33%;
+    }
+
+    .image2
+    {
+        max-width: 307px;
+        max-height: 390px;
+    }
+
+    .image3
+    {
+        max-width: 307px;
+        max-height: 136px;
+    }
+
+    .image4
+    {
+        max-width: 307px;
+        max-height: 136px;
+    }
 
     }
 
