--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,8 +1,24 @@
-@media screen and (max-width: 1024px)
+@media all and (min-width: 700px) and (max-width: 1032px)
 {
     .h2
     {
         font-size: 0;
+    }
+
+    .title_f
+    {
+        display: block;
+        padding: 1em;
+    }
+
+    .s1
+    {
+        margin-bottom: 0;
+    }
+
+    .il
+    {
+        margin: 1.5em;
     }
 
     .s2
@@ -28,11 +44,6 @@
         background-color: white;
     }
 
-    .p1
-    {
-        box-shadow: 7px 7px 10px #f2f2f2;
-    }
-
     .graphique
     {
         padding-top: 3em;
@@ -40,51 +51,83 @@
 
     .aa1
     {
-        justify-content: space-around;
         flex-flow: row wrap;
+        justify-content: space-around;
     }
 
     .vp
     {
-        width: 33%;
+        max-width: 310px;
         margin: 1em;
     }
 
     .fpif
     {
-        width: 33%;
+        max-width: 310px;
     }
 
     .cal
     {
-        width: 33%;
+        max-width: 310px;
         margin: 1em;
     }
 
     .ndgpl
     {
-        width: 33%;
+        max-width: 310px;
+        padding-top: 1em;
     }
 
     .image2
     {
-        max-width: 307px;
+        max-width: 310px;
         max-height: 390px;
     }
 
     .image3
     {
-        max-width: 307px;
+        max-width: 310px;
         max-height: 136px;
     }
 
     .image4
     {
-        max-width: 307px;
+        max-width: 310px;
         max-height: 136px;
     }
 
     }
 
+@media all and (min-width: 1033px) and (max-width: 1350px)
+{
+    #ah1
+    {
+        background-color: white;
+        padding-left: 3em;
+    }
+
+    aside
+    {
+        background-color: white;
+    }
+
+    .aa1
+    {
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+    }
+
+    .ndgpl
+    {
+       flex-flow: row nowrap;
+       padding: 2em;
+    }
+
+    .ndg
+    {
+        margin-right: 2em;
+    }
+
+}
 
     
