--- a/style_css_resolution_moyenne.css
+++ b/style_css_resolution_moyenne.css
@@ -1,4 +1,4 @@
-@media all and (min-width: 700px) and (max-width: 1032px)
+/*@media all and (min-width: 700px) and (max-width: 1032px)
 {
     .h2
     {
@@ -128,6 +128,6 @@
         margin-right: 2em;
     }
 
-}
+}*/
 
     
