--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -9,6 +9,7 @@ header
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin-left: 3em;
 }
 
 /*Navigation*/
@@ -16,6 +17,7 @@ nav ul
 {
     list-style: none;
     display: flex;
+    margin-right: 3em;
 }
 
 nav li 
@@ -43,34 +45,24 @@ nav li:hover
 h1
 {
     font-size: 20px;
-    padding: 0;
-    margin: 0;
 }
-
-/*h2
-{
-    font-size: 18px;
-    padding: 1.8em 0 0 3em;
-}*/
-
 
 /*Logo*/
-.logo
-{
-    text-align: left;
-    padding: 3em;
-}
-
 .s1
 {
-   margin-left: 3em;
-   margin-bottom: 1.8em;
+    margin-left: 3em;
+}
+.logo
+{
+    padding-top: 3em;
+    text-align: left;
 }
 
-/*Recherhe*/
+/*Begin's search*/
 #recherche
 {
     display: flex;
+    align-items: center;
 }
 
 .marqueur_1
@@ -78,7 +70,7 @@ h1
     border-radius: 20px 0 0 20px;
     background-color: #f2f2f2;
     font-size: 18px;
-    padding: 0.8em;
+    padding: 0.9em;
 }
 
 input
@@ -100,19 +92,39 @@ input
     padding: 1em;
 }
 
+.marqueur_2:hover
+{
+    cursor: pointer;
+}
+/*End's search*/
+
+/*Filters'beginning*/
+.filters
+{
+    display: flex;
+    align-items: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
 .title_f
 {
     font-size: 18px; 
     font-weight: bold;
 }
 
+a
+{
+    text-decoration: none;
+}
+
 .icone1
 {
     color:#0065fc;
     background-color: #deebff;
-    padding: 1em;
-    margin-right: 0.5em;
-    border-radius: 100%; 
+    padding: 0.9em;
+    border-radius: 100%;
+    margin-right: 0.7em;
 }
 
 .icone2
@@ -120,26 +132,28 @@ input
     color:#0065fc;
     background-color: #deebff;
     padding: 0.9em 1.1em 0.9em 1.1em;
-    margin-right: 10px;
-    border-radius: 100%; 
+    border-radius: 100%;
+    margin-right: 0.7em;
 }
 
 .i1
 {
-    margin: 2em;
+    margin: 1em;
     border-radius: 20px 20px 20px 20px;
-    border: 1px solid #f2f2f2;
+    border: 2px solid #f2f2f2;
     background-color: white;
     font-size: 15px;
     font-weight: bold;
-    padding: 0.9em 0.9em 0.9em 0;
+    padding: 0.8em 1em 0.8em 0;
 }
 
 .i1:hover
 {
     background-color: #0065fc;
     color: white;
+    cursor: pointer;
 }
+/*Filters'Ending*/
 
 /*Reuslt*/
 .information
@@ -147,39 +161,47 @@ input
     color: #0065fc;
     font-size: 12px;
     padding: 0.3em 0.7em 0.3em 0.7em;
-    margin-right: 0.8em;
+    margin: 2em 0.8em 1em 0;
     border-radius: 100%;
     border: 2px solid #f2f2ff;
+    text-align: center;
 }
 
 /*Accomodations'beginning*/
 .s2
 {
     display: flex;
+    margin: 2em 0 0 3em;
+}
+
+#logements
+{
+    margin-left: 3em;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 #ah1
 {
     background-color: #f2f2f2;
     border-radius: 30px 30px 30px 30px;
-    margin-left: 3em;
 }
 
 .presentation
 {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around; 
-    padding: 1em;
+    justify-content: space-evenly;
+    align-content: center;
 }
 
 .vignette
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    border: 2px solid white;
-    margin-bottom: 1.5em;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    padding-bottom: 0.5em;
+    margin-bottom: 1em;
+    box-shadow: 10px 10px 5px #f2f2f2;
 }
 
 .image
@@ -188,14 +210,19 @@ input
     height: 150px;
     object-fit: cover;
     border-radius:20px 20px 0 0; 
-    border: 1px solid white;
+    border: 2px solid white;
 }
 
 .ap
 {
-    padding: 0 0 2em 3em;
+    padding: 1.5em 3em;
     font-size: 16px;
     font-weight: bold;
+}
+
+.ap:hover
+{
+    cursor: pointer;
 }
 
 .legende
@@ -224,7 +251,7 @@ aside
     border-radius: 20px 20px 20px 20px;
     margin: 2em auto 2em auto;
     font-size: 16px;
-    box-shadow: 10px 10px 15px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
 }
 
 .image1
@@ -282,60 +309,79 @@ aside
 /*Populars' ending*/
 
 /*Activities' beginning*/
+.s3
+{
+    padding: 3em;
+}
+
+#visites
+{
+    font-size: 18px;
+}
+
 .aa1
 {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    padding: 3em;
+    align-content: center;
 }
     
 .vp
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 9px 9px 4px #f2f2f2;
+    height: 550px;
+    padding-bottom: 0.5em;
 }
 
 .fp
 {
     background-color: white;
     border-radius: 20px 20px 20px 20px;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
+    padding-bottom: 0.1em;
+    margin-bottom: 1.5em;
 }
 
 .if
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
+    padding-bottom: 0.1em;
 }
 
 .ndg
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
+    padding-bottom: 0.1em;
+    margin-bottom: 1em;
 }
 
 .pl
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
+    padding-bottom: 0.1em;
 }
 
 .cal
 {
     border-radius: 20px 20px 20px 20px;
     background-color: white;
-    box-shadow: 7px 7px 10px #f2f2f2;
+    box-shadow: 10px 10px 5px #f2f2f2;
+    height: 550px;
+    padding-bottom: 0.5em;
 }
 
 .image2
 {
     width: 310px;
-    height: 500px; 
+    height: 500px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -343,7 +389,7 @@ aside
 .image3
 {
     width: 310px;
-    height: 240px;
+    height: 243px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -351,7 +397,7 @@ aside
 .image4
 {
     width: 310px;
-    height: 205px;
+    height: 170px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
@@ -359,16 +405,16 @@ aside
 .image5
 {
     width: 310px;
-    height: 223px;
+    height: 210px;
     object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
 
 h3
 {
-   font-size: 16px; 
-   font-weight: bold;
-   padding-left: 1em;
+    font-size: 18px;
+    font-weight: 900;
+    padding-left: 0.6em;
 }
 /*Activities' ending*/
 
@@ -378,7 +424,9 @@ footer
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-content: center;
     background-color: #f2f2f2;
+    padding-right: 3em;
 }
 
 footer li
@@ -389,5 +437,5 @@ footer li
 
 .title_ap
 {
-    padding-left: 3em;
+    padding-left: 2.8em;
 }
