--- a/style_refonte_1503.css
+++ b/style_refonte_1503.css
@@ -124,7 +124,7 @@ a
     background-color: #deebff;
     padding: 0.9em;
     border-radius: 100%;
-    margin-right: 0.7em;
+    margin: 0 0.7em 0 -0.5em;
 }
 
 .icone2
@@ -133,7 +133,7 @@ a
     background-color: #deebff;
     padding: 0.9em 1.1em 0.9em 1.1em;
     border-radius: 100%;
-    margin-right: 0.7em;
+    margin: 0 0.7em 0 -0.5em;
 }
 
 .i1
@@ -159,8 +159,8 @@ a
 .information
 {
     color: #0065fc;
-    font-size: 12px;
-    padding: 0.3em 0.7em 0.3em 0.7em;
+    font-size: 13px;
+    padding: 0.8em 1.1em 0.8em 1.1em;
     margin: 2em 0.8em 1em 0;
     border-radius: 100%;
     border: 2px solid #f2f2ff;
