--- a/style_basse_resolution.css
+++ b/style_basse_resolution.css
@@ -2,22 +2,26 @@
 {
     header
     {
-        margin: 2em 0 0 1em;
+        padding: 0;
     }
 
     .logo
     {
-        padding: 0;
+        flex-grow: 1;
+        padding: 0 2em 0 0.5em;
     }
     
-   nav
+   /*nav
     {
-        margin: 0;
-    }
+        order: 2;
+        width: 100%;
+    }*/
 
     nav ul
     {
-        flex-flow: row-reverse nowrap;
+        flex-flow: row-reverse wrap-reverse;
+        padding: 0;
+        width: 100%;
     }
 
     nav li
@@ -31,16 +35,32 @@
         border-bottom: 2px solid #0065fc;
     }
 
-    .n1
+    nav a
+    {
+        margin: 0;
+    }
+    .n1, .n3
     {
         order: 1;
+        width: 30%;
+        /*text-align: center;*/
     }
 
-    .n3
+    .n1
     {
-        order: 1;       
+        padding: 23px 50px 0 0;
+        /*text-align: center;*/
     }
 
+    .n2
+    {
+        padding: 23px 0 19px;
+    }
+
+    h1
+    {
+        font-size: 25px;
+    }
     .recherche1
     {
        display: none;
@@ -90,7 +110,8 @@
 
     #s1
     {
-        padding: 0em;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
     }
 
     .options_f
@@ -108,4 +129,88 @@
     {
         padding: 0;
     }
+
+    .s2
+    {
+        margin: 0;
+        flex-flow: column-reverse wrap;
+    }
+
+    aside
+    {
+        margin: 0;
+        padding: 0;
+        border-radius: 0; 
+    }
+
+    .graphique
+    {
+        padding: 3em 1em 0 0.5em;
+    }
+
+    .image
+    {
+        width: 343px;
+    }
+
+    #ah1
+    { 
+        background-color: white;
+        padding: 3em 0.5em 0 0.5em;
+    }
+
+    #logements
+    {
+        padding-left: 0.5em;
+    }
+
+    .ap
+    {
+        padding-left: 0.5em;
+    }
+
+    /*Activities'beginning*/
+
+    .s3
+    {
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
+
+    .aa1
+    {
+        flex-flow: column nowrap;
+    }
+
+    .vp, .fp, .if, .ndg, .pl, .cal
+    {
+        width: 345px;
+        height: 150px;
+        margin-bottom: 1em;
+        padding-bottom: 3.5em;
+    }
+
+    .image2, .image3, .image4, .image5
+    {
+        width: 343px;
+        height: 150px; 
+
+    }
+
+    footer
+    {
+        flex-flow: column nowrap;
+    }
+
+    footer ul
+    {
+        padding-left: 0.5em
+    }
+
+    .title_ap
+    {
+        padding: 0.9em;
+        padding-right: 0;
+    }
 }
+
